# pysanity

./: README.rst  pep8ify.py  pepify.py  setup.cfg  tox.ini
pepify/: __init__.py  adaptation.py  adapters.py  proxy.py  util.py
pysanity/: proxy.py
requirements/: install.txt
tests/: test_logging.py
