[metadata]
name = pysanity
summary = Emulates sanity for other people's dirty ass non-pep compliant code via only the /dirtiest/ of means.
description-file = README.rst
home-page = https://github.com/akatrevorjay/pysanity
author = Trevor Joynson
author_email = github@skywww.net
license = GPL
keywords = 
    magic
    sanity
    pep8
    logging
    twisted
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[files]
packages = 
    pysanity

;[build_sphinx]
;source-dir = docs/
;build-dir = docs/_build
;all_files = 1

;[upload_sphinx]
;upload-dir = doc/_build/html
